<resources>
    <string name="app_name">Laboratorio3</string>
    <string name="logo_name">Pizzas</string>
    <string name="tipo_pizza">Tipo de pizza</string>
    <string name="tipo_masa">Tipo de masa</string>
    <string name="masa_gruesa">Masa gruesa</string>
    <string name="masa_delgada">Masa delgada</string>
    <string name="masa_artesanal">Masa artesanal</string>
    <string name="complementos">Complementos</string>
    <string name="extra_mozarella">Extra queso mozarella</string>
    <string name="extra_jamon">Extra jamón</string>
    <string name="direccion_envio">Dirección de envío</string>
    <string name="ordenar">¡Ordenar!</string>

    <string-array name="pizza_arrays">
        <item>Americana</item>
        <item>Meet lover</item>
        <item>Hawaiana</item>
        <item>Super suprema</item>
    </string-array>
</resources>
